<resources>
    <string name="app_name">Recipe Book</string>
    <string name="menu_title">Main Menu</string>
    <string name="menu_opt_one">Find Recipes</string>
    <string name="menu_opt_two">Make Grocery List</string>
    <string name="menu_opt_three">Recipe Book</string>
    <string name="menu_opt_four">Ingredients</string>
    <string name="background_descrip">Background for main menu</string>
    <string name="existingIngredientTitle">Select which ingredients you already have:</string>
    <string name="nextButton">Next</string>
    <string name="ingredient_title">Ingredients</string>
    <string name="view_ingredients">View/Edit Ingredients</string>
    <string name="add_ingredients">Add an Ingredient</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="package_price">Package Price</string>
    <string name="money">$</string>
    <string name="add_button">Add</string>
    <string name="editRecipe">View/Edit Recipe</string>
    <string name="addRecipe">Add a Recipe</string>
    <string name="deleteAll">Delete All (Testing)</string>
    <string name="recipeMenuTitle">Recipes</string>
    <string name="add_recipe_title">Add a Recipe</string>
    <string name="recipeIngredientsButton">Select Ingredients</string>
    <string name="prevIngredient">Previous</string>
    <string name="addAnotherIngredient">Add Another</string>
    <string name="finished">Finished</string>
    <string-array name="ingredient_types">
        <item>Dairy</item>
        <item>Meat</item>
        <item>Grains</item>
        <item>Vegetables</item>
        <item>Fruit</item>
        <item>Basics</item>
    </string-array>


</resources>
